--- a/index.html
+++ b/index.html
@@ -1,53 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="A web page about the fictional band
-    Stage Fright">
-    <meta name="keyWords" content="Stage Fright, Stage, Fright, Band,
-    Rock Band, Music, Web Team Contest, Web Contest, Website Contest, Website Team,
-    Web Team">
-    
-    <title>Stage Fright</title>
-
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-
-    <div id="container">
-
-        <nav>
-
-            <ul>
-                <li><a href="pages/band.html">BAND</a></li>
-                <li><img src="images/circle.png" alt="circle" id="circle"></li>
-                <li><a href="pages/tour.html">TOUR</a></li>
-                <li><img src="images/circle.png" alt="circle" id="circle"></li>
-                <li><a href="pages/store.html">STORE</a></li>
-                <li><img src="images/circle.png" alt="circle" id="circle"></li>
-                <li><a href="#">HOME</a></li>
-            </ul>
-
-        </nav>
-
-        <header>
-            <img src="images/header.png" alt="header" id="headerImg">
-        </header>
-
-        <aside>
-            aside
-        </aside>
-
-        <section>
-            section
-        </section>
-
-        <footer>
-            footer
-        </footer>
-
-    </div>
-
-</body>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="css/style.css">
+        
+        <title>Stage Fright</title>
+    </head>
+    <body>
+        <script src="js/bootstrap.bundle.js"></script>
+    </body>
 </html>
+
+<!--Skylar-->
