--- a/index.html
+++ b/index.html
@@ -9,6 +9,38 @@
         <title>Stage Fright</title>
     </head>
     <body>
+        <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark" style="padding-top: 1em; padding-bottom: 1em;">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <img src="images/stage fright.png" alt="logo" width="70" height="70">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ml-auto navbar-main">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="pages/music.html">Music</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="pages/store.html">Store</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="pages/tour.html">Tour</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+        <div class="container-fluid" style="padding: 0; min-width: 100%;">
+            <img src="images/main-bg.jpg" alt="background" class="img-fluid">
+        </div>
+        
+
         <script src="js/bootstrap.bundle.js"></script>
     </body>
 </html>
