worked on tour page

--- a/pages/tour.html
+++ b/pages/tour.html
@@ -3,13 +3,32 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="../css/bootstrap.min.css">
+        <link rel="stylesheet" href="../css/style.css">
         
         <title>Stage Fright</title>
     </head>
     <body>
-        <script src="js/bootstrap.bundle.js"></script>
+        <div class="container-md overflow-hidden text-center">
+            <h1 class="border border-5 border-dark"> Stage Fright is on Tour </h1>
+
+            <div class="row">
+                <div class="col-md p-3 border border-dark h3"> Tickets avalible for 
+                    the ____ tour now! Picture under
+                </div>
+            </div>
+
+            <div class="row gx-5">
+                <div class="col">
+                   <div class="p-3 border border-dark">Phoenix, Dallas, Seattle</div>
+                </div>
+                <div class="col">
+                    <div class="p-3 border border-dark"> Detroit, Nashville, Charleston</div>
+                </div>
+            </div>            
+        </div>
+
+        <script src="../js/bootstrap.bundle.js"></script>
     </body>
 </html>
 
