Added extra folders to house subpages

--- a/pages/Store Subpages/Categories Pages/hats.html
+++ b/pages/Store Subpages/Categories Pages/hats.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="../../css/bootstrap.min.css">
-        <link rel="stylesheet" href="../../css/style.css">
+        <link rel="stylesheet" href="../../../css/bootstrap.min.css">
+        <link rel="stylesheet" href="../../../css/style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
         <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark" style="padding-top: 1em; padding-bottom: 1em;">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img src="../../images/stage fright.png" alt="logo" width="70" height="70">
+                    <img src="../../../images/stage fright.png" alt="logo" width="70" height="70">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -26,10 +26,10 @@
                             <a class="nav-link" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../music.html">Music</a>
+                            <a class="nav-link" href="../../music.html">Music</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="../store.html">Store</a>
+                            <a class="nav-link active" href="../../store.html">Store</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="../tour.html">Tour</a>
@@ -40,7 +40,7 @@
         </nav>
 
         <div class="container-fluid head-container" style="padding: 50px; min-width: 100%;">
-            <h1>Store: Accessories</h1>
+            <h1>Store: Hats</h1>
             <nav class="navbar navbar-expand-lg bg-body-tertiary">
                 <div class="container-fluid">
                   <a class="navbar-brand" href="#">Sections</a>
@@ -68,8 +68,8 @@
                         </a>
                         <ul class="dropdown-menu">
                           <li><a class="dropdown-item" href="tops.html">Tops</a></li>
-                          <li><a class="dropdown-item" href="hats.html">Hats</a></li>
-                          <li><a class="dropdown-item active" href="#">Accessories</a></li>
+                          <li><a class="dropdown-item active" href="#">Hats</a></li>
+                          <li><a class="dropdown-item" href="other.html">Accessories</a></li>
                           <li><a class="dropdown-item" href="posters.html">Posters</a></li>
                           <li><a class="dropdown-item" href="albums.html">Albums</a></li>
                           <li><a class="dropdown-item" href="tickets.html">Tickets</a></li>
@@ -87,10 +87,10 @@
         <div class="row">
             <div class="col-md">
                 <div class="card mx-auto" style="width: 50%;">
-                    <img src="../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
+                    <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
                     <div class="card-body">
-                    <h5 class="card-title">Scream Team Keychain</h5>
-                    <p class="card-text">Keep a token of Stage Fright with you at all times</p>
+                    <h5 class="card-title">Scream Team Beanie</h5>
+                    <p class="card-text">A hat for the Scream Team during winter</p>
                     <a href="#" class="btn btn-primary">Take a look</a>
                     </div>
                 </div>
@@ -98,10 +98,10 @@
 
             <div class="col-md">
                 <div class="card mx-auto" style="width: 50%;">
-                    <img src="../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
+                    <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
                     <div class="card-body">
-                    <h5 class="card-title">Scream Team Sticker Pack</h5>
-                    <p class="card-text">Slap these on your computer, desk, wherever to represent your favorite band</p>
+                    <h5 class="card-title">Scream Team Baseball Cap</h5>
+                    <p class="card-text">Go into summer rocking this Scream Team hat</p>
                     <a href="#" class="btn btn-primary">Take a look</a>
                     </div>
                 </div>
@@ -109,10 +109,10 @@
 
             <div class="col-md">
                 <div class="card mx-auto" style="width: 50%;">
-                    <img src="../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
+                    <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
                     <div class="card-body">
-                    <h5 class="card-title">Scream Team Charms</h5>
-                    <p class="card-text">Put these on a necklace or bracelet and share with your friends</p>
+                    <h5 class="card-title">Scream Team Trucker Hat</h5>
+                    <p class="card-text">Cruise down the road while representing Stage Fright</p>
                     <a href="#" class="btn btn-primary">Take a look</a>
                     </div>
                 </div>
