--- a/pages/Store Subpages/Categories Pages/tickets.html
+++ b/pages/Store Subpages/Categories Pages/tickets.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="../../css/bootstrap.min.css">
-        <link rel="stylesheet" href="../../css/style.css">
+        <link rel="stylesheet" href="../../../css/bootstrap.min.css">
+        <link rel="stylesheet" href="../../../css/style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
         <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark" style="padding-top: 1em; padding-bottom: 1em;">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img src="../../images/stage fright.png" alt="logo" width="70" height="70">
+                    <img src="../../../images/stage fright.png" alt="logo" width="70" height="70">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -23,16 +23,16 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto navbar-main">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#">Home</a>
+                            <a class="nav-link" href="../../../index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../music.html">Music</a>
+                            <a class="nav-link" href="../../music.html">Music</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="../store.html">Store</a>
+                            <a class="nav-link active" href="../../store.html">Store</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../tour.html">Tour</a>
+                            <a class="nav-link" href="../../tour.html">Tour</a>
                         </li>
                     </ul>
                 </div>
@@ -40,7 +40,7 @@
         </nav>
 
         <div class="container-fluid head-container" style="padding: 50px; min-width: 100%;">
-            <h1>Store: Posters</h1>
+            <h1>Store: Tickets</h1>
             <nav class="navbar navbar-expand-lg bg-body-tertiary">
                 <div class="container-fluid">
                   <a class="navbar-brand" href="#">Sections</a>
@@ -70,9 +70,9 @@
                           <li><a class="dropdown-item" href="tops.html">Tops</a></li>
                           <li><a class="dropdown-item" href="hats.html">Hats</a></li>
                           <li><a class="dropdown-item" href="other.html">Accessories</a></li>
-                          <li><a class="dropdown-item active" href="#">Posters</a></li>
+                          <li><a class="dropdown-item" href="posters.html">Posters</a></li>
                           <li><a class="dropdown-item" href="albums.html">Albums</a></li>
-                          <li><a class="dropdown-item" href="tickets.html">Tickets</a></li>
+                          <li><a class="dropdown-item active" href="#">Tickets</a></li>
                         </ul>
                       </li>
                       <li class="nav-item">
@@ -87,10 +87,10 @@
         <div class="row">
             <div class="col-md">
                 <div class="card mx-auto" style="width: 50%;">
-                    <img src="../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
+                    <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
                     <div class="card-body">
-                    <h5 class="card-title">Full Band Poster</h5>
-                    <p class="card-text">Stage Fright all together</p>
+                    <h5 class="card-title">Stage Fright: Show 1</h5>
+                    <p class="card-text"></p>
                     <a href="#" class="btn btn-primary">Take a look</a>
                     </div>
                 </div>
@@ -98,10 +98,10 @@
 
             <div class="col-md">
                 <div class="card mx-auto" style="width: 50%;">
-                    <img src="../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
+                    <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
                     <div class="card-body">
-                    <h5 class="card-title">Alec Thornstrum</h5>
-                    <p class="card-text">The siren of the band</p>
+                    <h5 class="card-title">Stage Fright: Show 2</h5>
+                    <p class="card-text"></p>
                     <a href="#" class="btn btn-primary">Take a look</a>
                     </div>
                 </div>
@@ -109,10 +109,10 @@
 
             <div class="col-md">
                 <div class="card mx-auto" style="width: 50%;">
-                    <img src="../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
+                    <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
                     <div class="card-body">
-                    <h5 class="card-title">Blake Jhonson</h5>
-                    <p class="card-text">The monster on guitar</p>
+                    <h5 class="card-title">Stage Fright: Show 3</h5>
+                    <p class="card-text"></p>
                     <a href="#" class="btn btn-primary">Take a look</a>
                     </div>
                 </div>
@@ -124,10 +124,10 @@
         <div class="row">
             <div class="col-md">
                 <div class="card mx-auto" style="width: 50%;">
-                    <img src="../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
+                    <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
                     <div class="card-body">
-                    <h5 class="card-title">Nyx Blair</h5>
-                    <p class="card-text">The boss of bass</p>
+                    <h5 class="card-title">Stage Fright: Show 4</h5>
+                    <p class="card-text"></p>
                     <a href="#" class="btn btn-primary">Take a look</a>
                     </div>
                 </div>
@@ -135,10 +135,10 @@
     
             <div class="col-md">
                 <div class="card mx-auto" style="width: 50%;">
-                    <img src="../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
+                    <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
                     <div class="card-body">
-                    <h5 class="card-title">Jack "Stix" Borne</h5>
-                    <p class="card-text">The maniac on drums</p>
+                    <h5 class="card-title">Stage Fright: Show 5</h5>
+                    <p class="card-text"></p>
                     <a href="#" class="btn btn-primary">Take a look</a>
                     </div>
                 </div>
@@ -146,16 +146,16 @@
     
             <div class="col-md">
                 <div class="card mx-auto" style="width: 50%;">
-                    <img src="../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
+                    <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
                     <div class="card-body">
-                    <h5 class="card-title">Hector Jones</h5>
-                    <p class="card-text">The master of the keys himself</p>
+                    <h5 class="card-title">Stage Fright: Show 6</h5>
+                    <p class="card-text"></p>
                     <a href="#" class="btn btn-primary">Take a look</a>
                     </div>
                 </div>
             </div>
         </div>
 
-        <script src="../../js/bootstrap.bundle.js"></script>
+        <script src="../../../js/bootstrap.bundle.js"></script>
     </body>
 </html>
