--- a/pages/Store Subpages/Categories Pages/tops.html
+++ b/pages/Store Subpages/Categories Pages/tops.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="../../css/bootstrap.min.css">
-        <link rel="stylesheet" href="../../css/style.css">
+        <link rel="stylesheet" href="../../../css/bootstrap.min.css">
+        <link rel="stylesheet" href="../../../css/style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
         <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark" style="padding-top: 1em; padding-bottom: 1em;">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img src="../../images/stage fright.png" alt="logo" width="70" height="70">
+                    <img src="../../../images/stage fright.png" alt="logo" width="70" height="70">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -23,16 +23,16 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto navbar-main">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#">Home</a>
+                            <a class="nav-link" href="../../../index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../music.html">Music</a>
+                            <a class="nav-link" href="../../music.html">Music</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="../store.html">Store</a>
+                            <a class="nav-link active" href="../../store.html">Store</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../tour.html">Tour</a>
+                            <a class="nav-link" href="../../tour.html">Tour</a>
                         </li>
                     </ul>
                 </div>
@@ -87,7 +87,7 @@
         <div class="row">
             <div class="col-md">
                 <div class="card mx-auto" style="width: 50%;">
-                    <img src="../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
+                    <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
                     <div class="card-body">
                     <h5 class="card-title">Scream Team Tee</h5>
                     <p class="card-text">Simple T-shirt with a Stage Fright Logo</p>
@@ -98,7 +98,7 @@
 
             <div class="col-md">
                 <div class="card mx-auto" style="width: 50%;">
-                    <img src="../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
+                    <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
                     <div class="card-body">
                     <h5 class="card-title">Scream Team Sweatshirt</h5>
                     <p class="card-text">Puffy sweatshirt with a Stage Fright Logo</p>
@@ -109,7 +109,7 @@
 
             <div class="col-md">
                 <div class="card mx-auto" style="width: 50%;">
-                    <img src="../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
+                    <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
                     <div class="card-body">
                     <h5 class="card-title">Scream Team Hoodie</h5>
                     <p class="card-text">Fleece hoodie with a Stage Fright Logo on the arms and front</p>
@@ -119,6 +119,6 @@
             </div>
         </div>
 
-        <script src="../../js/bootstrap.bundle.js"></script>
+        <script src="../../../js/bootstrap.bundle.js"></script>
     </body>
 </html>
