--- a/pages/store.html
+++ b/pages/store.html
@@ -104,42 +104,42 @@
                   <img src="../images/blank-1886013_640.png" class="d-block mx-auto w-50 c-image" alt="...">
                   <div class="carousel-caption d-none d-md-block">
                     <h5 class="text-primary">Tops</h5>
-                    <a href="Store Subpages/tops.html" class="btn btn-primary">Check It Out!</a>
+                    <a href="Store Subpages/Categories Pages/tops.html" class="btn btn-primary">Check It Out!</a>
                   </div>
                 </div>
                 <div class="carousel-item c-item">
                   <img src="../images/blank-1886013_640.png" class="d-block mx-auto w-50 c-image" alt="...">
                   <div class="carousel-caption d-none d-md-block">
                     <h5 class="text-primary">Hats</h5>
-                    <a href="Store Subpages/hats.html" class="btn btn-primary">Check It Out!</a>
+                    <a href="Store Subpages/Categories Pages/hats.html" class="btn btn-primary">Check It Out!</a>
                   </div>
                 </div>
                 <div class="carousel-item c-item">
                   <img src="../images/blank-1886013_640.png" class="d-block mx-auto w-50 c-image" alt="...">
                   <div class="carousel-caption d-none d-md-block">
                     <h5 class="text-primary">Accessories</h5>
-                    <a href="Store Subpages/other.html" class="btn btn-primary">Check It Out!</a>
+                    <a href="Store Subpages/Categories Pages/other.html" class="btn btn-primary">Check It Out!</a>
                   </div>
                 </div>
                 <div class="carousel-item c-item">
                   <img src="../images/blank-1886013_640.png" class="d-block mx-auto w-50 c-image" alt="...">
                   <div class="carousel-caption d-none d-md-block">
                     <h5 class="text-primary">Posters</h5>
-                    <a href="Store Subpages/posters.html" class="btn btn-primary">Check It Out!</a>
+                    <a href="Store Subpages/Categories Pages/posters.html" class="btn btn-primary">Check It Out!</a>
                   </div>
                 </div>
                 <div class="carousel-item c-item">
                   <img src="../images/blank-1886013_640.png" class="d-block mx-auto w-50 c-image" alt="...">
                   <div class="carousel-caption d-none d-md-block">
                     <h5 class="text-primary">Albums</h5>
-                    <a href="Store Subpages/albums.html" class="btn btn-primary">Check It Out!</a>
+                    <a href="Store Subpages/Categories Pages/albums.html" class="btn btn-primary">Check It Out!</a>
                   </div>
                 </div>
                 <div class="carousel-item c-item">
                   <img src="../images/blank-1886013_640.png" class="d-block mx-auto w-50 c-image" alt="...">
                   <div class="carousel-caption d-none d-md-block">
                     <h5 class="text-primary">Tickets</h5>
-                    <a href="Store Subpages/tickets.html" class="btn btn-primary">Check It Out!</a>
+                    <a href="Store Subpages/Categories Pages/tickets.html" class="btn btn-primary">Check It Out!</a>
                   </div>
                 </div>
               </div>
